--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -3,6 +3,7 @@
 body
   font-family: 'Muli', sans-serif
   color: $text-color
+  background-color: $secondary
 .container
   max-width: 1100px
   margin: auto
