--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -46,22 +46,35 @@
   &__counter
     font-size: 14px
     line-height: 18px
-.swiper-container 
-  width: 100%
-  height: 450px
-  position: relative
-  border-radius: 8px
-  &::after
-    content: ''
-    position: absolute
+.swiper
+  &-container
     width: 100%
-    height: 100%
-    top: 0
-    left: 0
-    right: 0
-    bottom: 0
-    background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
-    z-index: 10
+    height: 450px
+    position: relative
+    border-radius: 8px
+  // &::after
+  //   content: ''
+  //   position: absolute
+  //   width: 100%
+  //   height: 100%
+  //   top: 0
+  //   left: 0
+  //   right: 0
+  //   bottom: 0
+  //   background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
+  //   z-index: 10
+  &-slide
+    &::after
+      content: ''
+      position: absolute
+      width: 100%
+      height: 100%
+      top: 0
+      left: 0
+      right: 0
+      bottom: 0
+      background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
+      z-index: 10
 .slider
   width: 728px
   &-button
@@ -84,5 +97,3 @@
     &--prev
       left: 18px
       background-image: url(../image/arrow-prev.svg)
-
-
