--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -91,6 +91,7 @@
     background-position: center
     // background-size: 10px
     background-color: transparent
+    outline: 0
     &--next
       right: 18px
       background-image: url(../image/arrow-next.svg)
