fixed: fonts in booking Nunito, add  semiBold 600

--- a/css/style.css
+++ b/css/style.css
@@ -673,6 +673,8 @@ template {
   padding: 28px;
   background-color: #0A223D;
   color: #ffffff;
+  font-family: Nunito;
+  font-style: normal;
 }
 
 .booking__info {
