--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -113,6 +113,8 @@
   padding: 28px
   background-color: $dark
   color: $light
+  font-family: Nunito
+  font-style: normal
   &__info
     display: flex
     justify-content: space-between
