--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,7 @@
 @import 'blocks/breadcrumb'
 // Стили блока Отель
 @import 'blocks/hotel'
+// Стили для блока Подписка
+@import 'blocks/newsletter'
 // Подключение стилей для адаптива
 @import 'media' 
