--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -82,6 +82,9 @@
       bottom: 0
       background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
       z-index: 10
+      border-radius: 8px
+    &__image
+      border-radius: 8px
 .slider
   width: 728px
   height: 450px
