--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -15,7 +15,8 @@
         // мое бордер 8 -но применяется только к нижней части во всех браузерах
         border-radius: 8px
 @media (max-width: 992px)
-  .container
+  .container, 
+  .newsletter-wrapper
     max-width: 700px
   .logo
     width: 132px
@@ -99,6 +100,12 @@
     width: 100%
   .map
     width: 100%
+  .newsletter
+    &-wrapper
+      max-width: 576px
+      width: 92%
+      flex-direction: column
+      align-items: flex-start
 @media (max-width: 576px)
   .logo
     width: 99px
@@ -107,6 +114,18 @@
   .hotel
     &-slider
       margin-bottom: 20px
+  .newsletter
+    padding: 76px 0 83px 0
+    &__title
+      margin-bottom: 37px
+      font-size: 20px
+      line-height: 25px
+    &-title
+      &__strong
+        font-size: 30px
+        line-height: 38px
+  .subscribe
+    width: 100%
 
 
 
