--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,10 +1,11 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
-  .slider
-    width: 590px 
+  .hotel
+    &__slider
+      width: 590px
   .swiper
-    &-slide
+    &-slider
       // мое бордер радиус для псевдокласса - применяется к верхней и в целом с бордером для image все равботает
       &::after
         border-radius: 8px
