--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,5 +12,7 @@
 @import 'blocks/hotel'
 // Стили для блока Подписка
 @import 'blocks/newsletter'
+// Стили для Отзывов
+@import 'blocks/reviews'
 // Подключение стилей для адаптива
 @import 'media' 
