--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -13,7 +13,7 @@
       display: flex
       flex-direction: column
       align-items: center
-      width: 731px
+      max-width: 731px
       margin: auto
       margin-top: 45px
       margin-bottom: 0
@@ -58,10 +58,7 @@
         left: 0
       &--next
         background-image: url(../image/arrow-next-secondary.svg)
-        right: 0
-
-
-      
+        right: 0      
     &__profile
       display: flex
       flex-direction: column
@@ -100,8 +97,6 @@
       text-align: justify
       margin: auto
       max-width: 537px
-.swiper
-  &-slide
-    border: 1px solid red
+
       
     
