--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,11 +1,11 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
+  .slider
+    width: 590px
   .hotel
-    &__slider
-      width: 590px
-  .swiper
     &-slider
+      width: 590px
       // мое бордер радиус для псевдокласса - применяется к верхней и в целом с бордером для image все равботает
       &::after
         border-radius: 8px
@@ -40,15 +40,25 @@
       margin-bottom: 30px
     &-right
       flex-direction: row
+    &-slider
+      width: 100%
   .booking
     width: 340px
-  .slider
-    width: 100%
+
   .map
     width: 340px
   .search  
     &__input  
       width: 340px
+  .reviews
+    &-slider
+      &__item
+        max-width: 579px
+        &:after,
+        &:before
+          display: none
+    &__title
+      font-size: 30px
 @media (max-width: 767px)
   .container
     max-width: 576px
@@ -91,12 +101,12 @@
       &__offer
         order: -1
         margin-left: 0
-  .slider
-    height: 350px
   .hotel
     &-right
       flex-direction: column
       min-height: 450px
+    &-slider
+      height: 350px
   .booking
     width: 100%
   .map
@@ -107,14 +117,30 @@
       width: 92%
       flex-direction: column
       align-items: flex-start
+  .reviews
+    &__title
+      font-size: 25px  
+    &-slider
+      &__item
+        padding: 0 29px 36px 33px
+      &__button
+        top: 32px
+        &--prev
+          left: 50%
+          transform: translate(-50%, 0)
+          margin-left: -65px
+        &--next
+          right: 50%
+          transform: translate(50%, 0)
+          margin-right: -65px   
 @media (max-width: 576px)
   .logo
     width: 99px
-  .slider
-    height: 250px
   .hotel
-    &-slider
+    &__slider
       margin-bottom: 20px
+    &-slider
+      height: 275px
   .newsletter
     padding: 76px 0 83px 0
     &__title
@@ -127,6 +153,22 @@
         line-height: 38px
   .subscribe
     width: 100%
+@media (max-width: 320px) 
+  .hotel
+    padding-top: 0
+    padding-bottom: 40px
+    &-slider
+      height: 179px
+  .reviews
+    &__title
+      font-size: 18px
+      line-height: 23px
+      margin-bottom: 42px
+      margin-top: 0
+    &-slider
+      &__item
+        margin-top: 10
+
 
 
 
