--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -1,13 +1,18 @@
 .reviews
   padding: 40px 0 70px 0
   &__title
+    // мое
+    max-width: 606px
+    flex-shrink: 0
+    margin: auto
+    margin-bottom: 70px
+    // ---
     font-style: normal
     font-weight: bold
     font-size: 36px
     line-height: 45px
     text-align: center
-    text-transform: uppercase
-    margin-bottom: 70px
+    text-transform: uppercase   
   &-slider
     &__item
       display: flex
