--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -119,7 +119,8 @@
       align-items: flex-start
   .reviews
     &__title
-      font-size: 25px  
+      font-size: 25px
+      margin-bottom: 30px  
     &-slider
       &__item
         padding: 0 29px 36px 33px
