--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -29,6 +29,11 @@
     font-weight: 300
     font-size: 24px
     line-height: 30px
+    // мое
+    max-width: 242px
+    display: flex
+    flex-direction: column
+    flex-shrink: 0
     &__strong
       display: block
       font-style: normal
