--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -58,7 +58,8 @@
     font-weight: 300
     font-size: 14px
     line-height: 18px
-    color: #BDBDBD
+    &::placeholder
+      color: #BDBDBD 
   &__button
     position: absolute
     min-width: 65px
