--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -92,8 +92,10 @@
       margin-bottom: 4px
       color: #000000
     &__rating
+      width: 48px
       display: flex
       align-items: center
+      justify-content: space-between
     &__text
       font-style: normal
       font-weight: normal
