--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -15,6 +15,9 @@
         object-fit: cover
         // мое бордер 8 -но применяется только к нижней части во всех браузерах
         border-radius: 8px
+  .card
+    width: 230px
+    height: 230px
 @media (max-width: 992px)
   .container, 
   .newsletter-wrapper
@@ -44,13 +47,13 @@
       width: 100%
   .booking
     width: 340px
-
   .map
     width: 340px
   .search  
     &__input  
       width: 340px
   .reviews
+    padding-bottom: 60px
     &-slider
       &__item
         max-width: 579px
@@ -59,6 +62,21 @@
           display: none
     &__title
       font-size: 30px
+  .activities 
+    padding-bottom: 46px
+    &-wrapper
+      flex-wrap: wrap
+    &__card
+      margin-bottom: 20px
+    &__title
+      margin-bottom: 0
+      margin-top: 0
+  .card
+    width: 339px
+    height: 255px
+    &__title
+      font-size: 24px
+      line-height: 30px
 @media (max-width: 767px)
   .container
     max-width: 576px
@@ -133,7 +151,40 @@
         &--next
           right: 50%
           transform: translate(50%, 0)
-          margin-right: -65px   
+          margin-right: -65px
+  .card
+    width: 280px
+    min-height: 255px
+    &__title
+      font-size: 20px
+  .activities
+    padding-top: 40px
+    padding-bottom: 60px
+    &__title
+      font-size: 24px
+      line-height: 30px
+@media (max-width: 619px)
+  .card
+    width: 48%
+    min-height: 255px
+    display: flex
+    flex-direction: column
+    object-fit: cover
+    margin-right: 8px
+    margin-bottom: 11px
+    &__image
+      object-fit: cover
+@media (max-width: 600px)
+  .card
+    width: 257px
+    height: 255px
+    display: flex
+    flex-direction: column
+    object-fit: cover
+    margin-left: auto
+    margin-left: auto
+    &__image
+      object-fit: cover
 @media (max-width: 576px)
   .logo
     width: 99px
@@ -154,6 +205,30 @@
         line-height: 38px
   .subscribe
     width: 100%
+  .card
+    display: flex
+    flex-direction: column
+    width: 100%
+    // height: 255px
+    object-fit: cover
+    z-index: 100
+    &__image
+      height: 130%
+  .activities
+    background-color: $light
+    z-index: -100
+    &__title
+      font-size: 19px
+      line-height: 24px
+@media (max-width: 376px)
+  .activities
+    &__title
+      font-size: 19px
+      line-height: 24px
+  .card 
+    &__title
+      font-size: 16px
+      line-height: 20px
 @media (max-width: 320px) 
   .hotel
     padding-top: 0
@@ -169,6 +244,21 @@
     &-slider
       &__item
         margin-top: 10
+  .card
+    &__image
+      width: 100%
+      height: 100%
+    &__title
+      font-size: 16px
+      line-height: 20px
+  .activities
+    &__title
+      font-size: 18px
+      line-height: 23px
+      margin-bottom: 36px
+      padding-bottom: 0  
+      margin-top: 0
+
 
 
 
