--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,5 +14,7 @@
 @import 'blocks/newsletter'
 // Стили для Отзывов
 @import 'blocks/reviews'
+// Стили для Развлечений
+@import 'blocks/activities'
 // Подключение стилей для адаптива
 @import 'media' 
