--- a/css/style.css
+++ b/css/style.css
@@ -1478,15 +1478,23 @@ template {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    width: 100%;
+    width: 285px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    min-height: 255px;
     -o-object-fit: cover;
        object-fit: cover;
     z-index: 100;
   }
-  .card__image {
-    height: 130%;
+  .card__title {
+    font-size: 16px;
+    line-height: 20px;
   }
   .activities {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     background-color: #ffffff;
     z-index: -100;
   }
