--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -208,13 +208,18 @@
   .card
     display: flex
     flex-direction: column
-    width: 100%
-    // height: 255px
+    width: 285px
+    margin-left: auto
+    margin-right: auto
+    margin-bottom: 20px
+    min-height: 255px
     object-fit: cover
     z-index: 100
-    &__image
-      height: 130%
+    &__title
+      font-size: 16px
+      line-height: 20px
   .activities
+    align-items: center
     background-color: $light
     z-index: -100
     &__title
