grid in the middle

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,5 +16,7 @@
 @import 'blocks/reviews'
 // Стили для Развлечений
 @import 'blocks/activities'
+// Стили для Подвала
+@import 'blocks/footer'
 // Подключение стилей для адаптива
 @import 'media' 
