--- a/css/style.css
+++ b/css/style.css
@@ -1173,7 +1173,7 @@ template {
   -ms-grid-columns: (minmax(min-content, 1fr))[4];
       grid-template-columns: repeat(4, minmax(-webkit-min-content, 1fr));
       grid-template-columns: repeat(4, minmax(min-content, 1fr));
-  grid-gap: 20px;
+  grid-gap: 20px 30px;
   grid-auto-rows: minmax(40px, -webkit-min-content);
   grid-auto-rows: minmax(40px, min-content);
   -webkit-box-align: start;
@@ -1229,6 +1229,7 @@ template {
 
 .footer__contact-form {
   grid-column: span 2;
+  margin-bottom: 102px;
 }
 
 .footer__form {
@@ -1288,6 +1289,7 @@ template {
 
 .footer__title--mb3 {
   margin-bottom: 30px;
+  padding-top: 10px;
 }
 
 .footer__icon-wrapper {
@@ -1352,6 +1354,7 @@ template {
   background: #EC1F46;
   border-radius: 4px;
   border: none;
+  cursor: pointer;
 }
 
 .footer__info {
@@ -1360,6 +1363,42 @@ template {
   font-size: 12px;
   line-height: 15px;
   color: #BDBDBD;
+}
+
+.footer__bottom {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2 / 4;
+  -ms-flex-item-align: end;
+      align-self: end;
+  justify-self: center;
+  width: 283px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__bottom-link {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  color: #ffffff;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.footer__bottom-image {
+  width: 136px;
+  height: 22px;
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
+  -ms-grid-column-align: end;
+      justify-self: end;
 }
 
 @media (max-width: 1200px) {
@@ -1471,6 +1510,68 @@ template {
   .card__title {
     font-size: 24px;
     line-height: 30px;
+  }
+  .footer-wrapper {
+    grid-gap: 20px 20px;
+  }
+  .footer__logo {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    margin-bottom: 19px;
+    width: 104px;
+    height: 120px;
+  }
+  .footer__social-network {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 3;
+    grid-column: 2 / 5;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .footer__categories {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+    margin-right: 30px;
+    margin-bottom: 41px;
+  }
+  .footer__additional {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
+    grid-column: 2 / 4;
+    margin-left: 10px;
+  }
+  .footer__contact-details {
+    -ms-grid-row: 3;
+    grid-row: 3;
+    grid-column: span 4;
+  }
+  .footer__contact-form {
+    -ms-grid-row: 4;
+    grid-row: 4;
+    grid-column: span 4;
+    padding-right: 50px;
+  }
+  .footer__bottom {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    -ms-grid-column-align: start;
+        justify-self: start;
+  }
+  .footer__bottom-link {
+    -ms-flex-item-align: start;
+        -ms-grid-row-align: start;
+        align-self: start;
+  }
+  .footer__bottom-image {
+    -ms-grid-column: 4;
+    grid-column: 4;
   }
 }
 
