--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -18,6 +18,9 @@
   .card
     width: 230px
     height: 230px
+  // .footer
+    // &__input
+      // flex-basis: 100%
 @media (max-width: 992px)
   .container, 
   .newsletter-wrapper
@@ -77,6 +80,71 @@
     &__title
       font-size: 24px
       line-height: 30px
+  // .footer
+  //   &-wrapper
+  //     grid-template-columns: repeat(6, 1fr)
+  //   &__logo
+  //     grid-row: 1 / 2
+  //   &__social
+  //     &-network
+  //       grid-row: 1 / 2
+  //       grid-column: span 4
+  //       align-self: center
+  //   &__categories
+  //     grid-row: 2 / 3
+  //     grid-column: span 2
+  //   &__legal
+  //     grid-column: span 2
+  //   &__additional
+  //     grid-column: span 2
+  //   &__contact
+  //     &-details
+  //       grid-row: 3
+  //       grid-column: span 4
+  //     &-form
+  //       grid-row: 4
+  //       grid-column: span 3
+
+  .footer
+    &-wrapper
+      grid-gap: 20px 20px
+    &__logo
+      grid-row: 1 / 2
+      margin-bottom: 19px
+      width: 104px
+      height: 120px
+    &__social
+      &-network
+        grid-row: 1 / 2
+        grid-column: 2 / 5
+        align-self: center
+    &__categories
+      grid-row: 2 / 3
+      margin-right: 30px
+      margin-bottom: 41px
+    &__additional
+      grid-column: 2 / 4
+      margin-left: 10px
+    &__contact
+      &-details
+        grid-row: 3
+        grid-column: span 4
+      &-form
+        grid-row: 4
+        grid-column: span 4
+        padding-right: 50px
+    &__bottom
+      grid-column: 1 / 3
+      justify-self: start
+      &-link
+        align-self: start
+      &-image
+        grid-column: 4
+
+
+
+
+
 @media (max-width: 767px)
   .container
     max-width: 576px
