--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -6,7 +6,7 @@
   &-wrapper
     display: grid
     grid-template-columns: repeat(4, minmax(min-content, 1fr))
-    grid-gap: 20px
+    grid-gap: 20px 30px
     grid-auto-rows: minmax(40px, min-content)
     align-items: start
   &__logo
@@ -32,6 +32,8 @@
       grid-column: span 2
     &-form
       grid-column: span 2
+      // новое для футер боттом
+      margin-bottom: 102px
   &__form
     display: flex
     flex-wrap: wrap
@@ -64,6 +66,7 @@
       margin-bottom: 34px
     &--mb3
       margin-bottom: 30px
+      padding-top: 10px
   &__icon
     &-wrapper
       min-width: 40px
@@ -116,12 +119,35 @@
     background: $primary
     border-radius: 4px
     border: none
+    cursor: pointer
   &__info
     font-style: normal
     font-weight: bold
     font-size: 12px
     line-height: 15px
     color: $footer-text-color
+  &__bottom
+    grid-column: 2 / 4
+    align-self: end
+    justify-self: center
+    width: 283px
+    display: flex
+    justify-content: space-between
+    &-link
+      font-style: normal
+      font-weight: normal
+      font-size: 12px
+      line-height: 15px
+      color: $light
+      text-decoration: none
+      cursor: pointer
+    &-image
+      width: 136px
+      height: 22px
+      align-self: end
+      justify-self: end
+      
+
 
 
 
